--- a/introduction-to-cqrs/index.html
+++ b/introduction-to-cqrs/index.html
@@ -13,7 +13,7 @@
 
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Introduction to CQRS">
-<meta name="twitter:description" content="In the world dominated by the IoT and the increasingly demanding users, the applications and the developers itself need to adapt a new paradigm to satisfy those neccesities.">
+<meta name="twitter:description" content="In the world dominated by the IoT and the increasingly demanding users, the applications and the developers itself need to adopt a new paradigm to satisfy those neccesities.">
 
 
 
@@ -24,7 +24,7 @@
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Introduction to CQRS">
-<meta property="og:description" content="In the world dominated by the IoT and the increasingly demanding users, the applications and the developers itself need to adapt a new paradigm to satisfy those neccesities.">
+<meta property="og:description" content="In the world dominated by the IoT and the increasingly demanding users, the applications and the developers itself need to adopt a new paradigm to satisfy those neccesities.">
 <meta property="og:url" content="http://rabbitstack.github.io/introduction-to-cqrs/">
 <meta property="og:site_name" content="Rabbit Stack">
 
@@ -163,7 +163,7 @@
     </div><!--/ .headline-wrap -->
     <div class="article-wrap">
       <p>
-In the world dominated by the IoT and the increasingly demanding users, the applications and the developers itself need to adapt a new paradigm to satisfy those needs. The users (customers) expectations are often very high as they want the contracted IT services highly available and the new feature requirements implemented as soon as possible. Besides that,
+In the world dominated by the IoT and the increasingly demanding users, the applications and the developers itself need to adopt a new paradigm to satisfy those needs. The users (customers) expectations are often very high as they want the contracted IT services highly available and the new feature requirements implemented as soon as possible. Besides that,
 project managers also want developers to complete the tasks in a time-constrained iterations guaranteeing the quality and good performance of the final product. Despite the increasing size and complexity of the applications, we still need to stay agile and deliver the product in established deadlines. Definitely, not a trivial task, at least not in a monolithic tightly coupled application architectures.
 </p>
 <p>
