--- a/from-monolithic-to-cloud-native-architectures/index.html
+++ b/from-monolithic-to-cloud-native-architectures/index.html
@@ -178,7 +178,7 @@ To establish an analogy, think about the following quote I have borrowed from <a
 
 <p>The silos are dissolved and recreated into a totally new organizational structure with shared agile practices, vocabulary and communication channels. Instead of focusing on processes, we focus on persons as the foundational aspect of change and innovation.</p>
 
-<p>The development team can provision the required infrastructure for the application deployment using a simple API to create virtual machines instances, storage and network topologies. That way the teams are considered as autonomous entities coexisting inside a totally decentralized ecosystem. When new members are incorporated into the team, they don't have to deal with the enormous codebase since separated bounded contexts can be used to reduce the coordination overhead and make developers productive from the beginning. The teams can cooporate independently using the REST API based collaboration model and deploy new functionality in a relaxed harmony with the rest of the teams. </p>
+<p>The development team can provision the required infrastructure for the application deployment using a simple API to create virtual machine instances, storage and network topologies. That way the teams are considered as autonomous entities coexisting inside a totally decentralized ecosystem. When new members are incorporated into the team, they don't have to deal with the enormous codebase since separated bounded contexts can be used to reduce the coordination overhead and make developers productive from the beginning. The teams can cooporate independently using the REST API based collaboration model and deploy new functionality in a relaxed harmony with the rest of the teams. </p>
 
 <h2>Distributed patterns</h2>
 
