Spring Boot or Not to Spring Boot

--- a/spring-boot-or-not-to-spring-boot/index.html
+++ b/spring-boot-or-not-to-spring-boot/index.html
@@ -175,7 +175,7 @@ I have been using Spring for almost seven years and had followed it's evolution,
 </p>
 
 <p>
-Spring Boot provides an abstraction layer on top of Spring core and the rest of subprojects under the Spring umbrella, with no need to deal with XML configuration files, the fact known as <b>CoC</b> (Convention Over Configuration). In this post I would like to expose the pros and cons of Spring Boot.
+Spring Boot provides an abstraction layer on top of Spring core and the rest of subprojects under the Spring umbrella, with no need to deal with XML configuration files, the pattern known as <b>CoC</b> (Convention Over Configuration). In this post I would like to expose the pros and cons of Spring Boot.
 </p>
 
 <p class="notice">
@@ -261,7 +261,7 @@ Spring Boot provides an abstraction layer on top of Spring core and the rest of 
   var pluginUrl = 
  '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', 'bhnedo']);
+  _gaq.push(['_setAccount', 'rabbitstack']);
   _gaq.push(['_trackPageview']);
 
   (function() {
