--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <title>Rabbit Stack</title>
 <meta name="description" content="Rabbit Stack Blog by Nedim Šabić">
-<meta name="keywords" content="Rabbit Stack, java, ruby, python, J2EE, cloud, openstack, cloud foundry, virtualization, spring framework">
+<meta name="keywords" content="Rabbit Stack, java, ruby, python, big data, J2EE, cloud, openstack, cloud foundry, virtualization, spring framework">
 
 
 
@@ -240,7 +240,7 @@
   var pluginUrl = 
  '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
   _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-  _gaq.push(['_setAccount', 'bhnedo']);
+  _gaq.push(['_setAccount', 'rabbitstack']);
   _gaq.push(['_trackPageview']);
 
   (function() {
