--- a/spring-boot-or-not-to-spring-boot/index.html
+++ b/spring-boot-or-not-to-spring-boot/index.html
@@ -202,7 +202,7 @@ Spring Boot provides an abstraction layer on top of Spring core and the rest of 
 
 <h2>Conclusion</h2>
 
-<p>Seven years ago, Spring framework had changed my perception on software development. Nowdays, it’s being the essential part of my day to day programmer’s life. I still feel very comfortable with XML based configuration, or the hybrid combination of JavaConfig and XML. That doesn’t mean things won’t change, and made the tip to scales in favor of Spring Boot.</p>
+<p>Seven years ago, Spring framework had changed my perception on software development. Nowdays, it’s being the essential part of my day to day programmer’s life. I still feel very comfortable with XML based configuration, or the hybrid combination of JavaConfig and XML. That doesn’t mean things won’t change, and make the tip to scales in favor of Spring Boot.</p>
 
       <hr />
       <footer role="contentinfo">
