--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+  ga('create', 'UA-61212549-1', 'auto');
+  ga('send', 'pageview');
   $(document).ready(function() {
      $('.image-popup').magnificPopup({type:'image'});
   });
