--- a/operating systems/fibratus-0-2-3/index.html
+++ b/operating systems/fibratus-0-2-3/index.html
@@ -6,14 +6,14 @@
 <head>
 <meta charset="utf-8">
 <title>Fibratus 0.2.3 &#8211; Rabbit Stack</title>
-
+<meta name="description" content="I'm pleased to announce the first production-ready release of Fibratus. The tool is now available via the pip package manager by typing pip install fibratus (the C compiler is required to build the kernel stream collector). The multiprocessing and Python serialization don't play well together when compiled with nuitka. Until I figure out how to make it work I'll not ship the compiled versions of Fibratus.">
 <meta name="keywords" content="operating systems, windows, kernel, system calls, exploration, python, cython, tracing">
 
 
 
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Fibratus 0.2.3">
-
+<meta name="twitter:description" content="I'm pleased to announce the first production-ready release of Fibratus. The tool is now available via the pip package manager by typing pip install fibratus (the C compiler is required to build the kernel stream collector). The multiprocessing and Python serialization don't play well together when compiled with nuitka. Until I figure out how to make it work I'll not ship the compiled versions of Fibratus.">
 
 
 
@@ -24,7 +24,7 @@
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Fibratus 0.2.3">
-
+<meta property="og:description" content="I'm pleased to announce the first production-ready release of Fibratus. The tool is now available via the pip package manager by typing pip install fibratus (the C compiler is required to build the kernel stream collector). The multiprocessing and Python serialization don't play well together when compiled with nuitka. Until I figure out how to make it work I'll not ship the compiled versions of Fibratus.">
 <meta property="og:url" content="http://rabbitstack.github.io/operating%20systems/fibratus-0-2-3/">
 <meta property="og:site_name" content="Rabbit Stack">
 
