--- a/cloud/microservices/from-monolithic-to-cloud-native-architectures/index.html
+++ b/cloud/microservices/from-monolithic-to-cloud-native-architectures/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="From monolithic to cloud-native architectures">
 <meta name="twitter:description" content="The software industry is moving fast - that's crystal clear. What now is considered as the state of the art model for software development and deployment, in a few years it usually becomes business agility barrier for the most organizations.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
