--- a/cloud/microservices/spring/a-pragmatic-approach-to-migration-from-monolithic-to-microservices/index.html
+++ b/cloud/microservices/spring/a-pragmatic-approach-to-migration-from-monolithic-to-microservices/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="A pragmatic approach to migration from monolithic to microservices">
 <meta name="twitter:description" content="If you recall from this post, I had stated about cloud native  manifesto and the tradeoff of migrating the monolithic based applications to the cloud. I have to admit it was pretty abstract and theoretical approach...">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
