--- a/lua/lua-rocks/index.html
+++ b/lua/lua-rocks/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Lua Rocks!">
 <meta name="twitter:description" content="This won't be a huge post as the ones I used to write. This time it will be a very short post about a thing that recently called my attention and I want to share it with you. After I had discovered...">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
