--- a/openstack/cloud foundry/devops/deploying-cloud-foundry-on-openstack-juno-and-xenserver-part-ii/index.html
+++ b/openstack/cloud foundry/devops/deploying-cloud-foundry-on-openstack-juno-and-xenserver-part-ii/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Deploying Cloud Foundry on OpenStack Juno and XenServer (Part II)">
 <meta name="twitter:description" content="Let's move on. We should have our OpenStack instance prepared for Cloud Foundry. The most usual way of deploying Cloud Foundry is through BOSH. For the who still didn't hear about it, BOSH is the platform for automation and lifcycle management of software and distributed services. It is also capable of monitoring and failure recovery of processes and virtual machines.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
