--- a/openstack/virtualization/deploying-cloud-foundry-on-openstack-juno-and-xenserver-part-i/index.html
+++ b/openstack/virtualization/deploying-cloud-foundry-on-openstack-juno-and-xenserver-part-i/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Deploying Cloud Foundry on OpenStack Juno and XenServer (Part I)">
 <meta name="twitter:description" content="Cloud Foundry ecosystem had been blowing my mind for a long time, and I think it really has made an IT disruption, letting us focus on applications as the essential unit of  business process.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
