--- a/operating systems/fibratus-0-2-3/index.html
+++ b/operating systems/fibratus-0-2-3/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Fibratus 0.2.3">
 <meta name="twitter:description" content="I'm pleased to announce the first production-ready release of Fibratus. The tool is now available via the pip package manager by typing pip install fibratus (the C compiler is required to build the kernel stream collector). The multiprocessing and Python serialization don't play well together when compiled with nuitka. Until I figure out how to make it work I'll not ship the compiled versions of Fibratus.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
