--- a/operating systems/fibratus-pre-release/index.html
+++ b/operating systems/fibratus-pre-release/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Fibratus Pre-Release">
 <meta name="twitter:description" content="Pardon me for not announcing the pre-release availability of Fibratus here on the blog. It was a pretty busy month for me. Anyway, I feel very excited about Fibratus. At the moment of writing, it has **205** stars and **23** forks on Github. I didn't expect much acceptance during these 3 weeks since I had pushed the code to the repository!">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
