--- a/operating systems/fibratus-video-teaser/index.html
+++ b/operating systems/fibratus-video-teaser/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Fibratus Video Teaser">
 <meta name="twitter:description" content="Over these past months I've been working on Fibratus - a tool for exploration and tracing of the Windows kernel. It's about 90% completed, and the alpha release could be out the next month.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
