--- a/operating systems/impressions-on-installation-of-coreos-on-a-bare-metal-server/index.html
+++ b/operating systems/impressions-on-installation-of-coreos-on-a-bare-metal-server/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Impressions on installation of CoreOS on a bare metal server">
 <meta name="twitter:description" content="Yesterday I threw away the SmartOS hypervisor from my home lab server. SmartOS is an excellent operating system (based on the Illumos, an open source fork of Solaris) made for running very demanding cloud infrastructures. Zones, ZFS, DTrace, the KVM port are some of the kicking ass features built-in into SmartOS.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
