--- a/origins/index.html
+++ b/origins/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Origins">
 <meta name="twitter:description" content="I finally decided to go digital with what I called Rabbit Stack. It will be a place where I'll be writing mostly about programming, devops, virtualization and similar IT freaky stuffs.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
