--- a/spring/spring-boot-or-not-to-spring-boot/index.html
+++ b/spring/spring-boot-or-not-to-spring-boot/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Spring Boot or Not to Spring Boot?">
 <meta name="twitter:description" content="For me, it could be difficult to imagine the inception of a medium / big Java project without using Spring framework. There is a myriad of reasons for that. It makes the code base clean and loosely coupled.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
