--- a/storm/virtualization/running-a-storm-cluster-on-smartos/index.html
+++ b/storm/virtualization/running-a-storm-cluster-on-smartos/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Running a Storm cluster on SmartOS">
 <meta name="twitter:description" content="In a time when Storm was still developed and maintained by Twitter, I was working on small experiments in local cluster mode by processing social data from Facebook. It rained a lot since then, and Storm is now an active project under Apache umbrella.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
