--- a/angularjs/spring/mongodb/spring-mvc-angular-hasta-la-vista-jsp/index.html
+++ b/angularjs/spring/mongodb/spring-mvc-angular-hasta-la-vista-jsp/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Spring MVC + Angular = Hasta la vista JSP!">
 <meta name="twitter:description" content="In a sea of client side MVC web frameworks, Angular seems to be the most prominent one due to its increasing popularity. Unlike other MVC frameworks (Backbone, Ember), Angular uses HTML as the templating language and also allow us to build our own HTML directives that can be interpreted by the browser.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
