--- a/operating systems/fibratus-0-6-0/index.html
+++ b/operating systems/fibratus-0-6-0/index.html
@@ -14,8 +14,8 @@
 <!-- Twitter Cards -->
 <meta name="twitter:title" content="Fibratus 0.6.0">
 <meta name="twitter:description" content="I'm happy to announce the release of Fibratus 0.6.0. Let's see what's new in this version.">
-
-
+<meta name="twitter:site" content="@rabbitstack">
+<meta name="twitter:creator" content="@rabbitstack">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://rabbitstack.github.io/images/rabbit-bkgd.jpg">
